<resources>
    <!-- App branding -->
    <string name="app_name" translatable="false">Gallery One</string>

    <!-- Secret album -->
    <string name="secret_album">Secret album</string>
    <string name="bdrawer_secret_header_more">More</string>
    <string name="btn_secret_album_exit">Close secret album</string>
    <string name="btn_secret_album_passcode">Change passcode</string>

    <!-- Placeholder -->
    <string name="placeholder_card_details" translatable="false">Placeholder string</string>
    <string name="placeholder_tab_all">All your photos will appear here.</string>
    <string name="placeholder_tab_album">All your albums will appear here.</string>
    <string name="placeholder_tab_date">Photos grouped by date will appear here.</string>
    <string name="placeholder_tab_fav">Favourite photos will appear here.</string>
    <string name="placeholder_tab_face">All recognized faces will appear here.</string>
    <string name="placeholder_secure">Your secrets will appear here.</string>

    <!-- Bottom drawer: Navigation -->
    <string name="tab_all">All</string>
    <string name="tab_album">Albums</string>
    <string name="tab_date">Date</string>
    <string name="tab_face">People</string>

    <!-- Bottom drawer: Headers -->
    <string name="bdrawer_header_create">Create new</string>
    <string name="bdrawer_header_viewmode">View mode for current tab</string>
    <string name="bdrawer_header_settings">Settings &amp; More</string>

    <!-- Bottom drawer: Actions -->
    <string name="bdrawer_action_new_album">Album</string>
    <string name="bdrawer_action_new_photo">Photo</string>
    <string name="bdrawer_action_new_video">Video</string>
    <string name="bdrawer_action_secret">Secret album</string>

    <!-- Bottom drawer: View modes -->
    <string name="bdrawer_viewmode_list">List</string>
    <string name="bdrawer_viewmode_grid_2">Grid</string>
    <string name="bdrawer_viewmode_grid_3">L</string>
    <string name="bdrawer_viewmode_grid_4">M</string>
    <string name="bdrawer_viewmode_grid_5">S</string>

    <!-- Bottom drawer: More -->
    <string name="bdrawer_more_theme">Theme</string>
    <string name="bdrawer_more_language">Language</string>
    <string name="bdrawer_more_about">About</string>

    <!-- Image bottom sheet: Actions -->
    <string name="action_close_viewer">Close viewer</string>
    <string name="action_delete">Delete</string>
    <string name="action_favorite">Add to favorite</string>
    <string name="action_edit">Edit</string>
    <string name="action_share">Share</string>
    <string name="action_copy">Copy to…</string>
    <string name="action_move">Move to…</string>
    <string name="action_slideshow">Start a slideshow</string>
    <string name="action_wallpaper">Set as wallpaper</string>

    <!-- Image bottom sheet: Details -->
    <string name="info_file_name">Name</string>
    <string name="info_location">Location</string>
    <string name="info_timestamp">Timestamp</string>
    <string name="info_resolution">Resolution</string>
    <string name="info_file_size">File size</string>
    <string name="info_file_path">File path</string>
    <plurals name="info_file_size_value">
        <item quantity="zero">%d byte</item>
        <item quantity="one">%d byte</item>
        <item quantity="other">%d bytes</item>
    </plurals>

    <!-- Bottom drawer: View custom album -->
    <string name="action_add_photo">Add photo</string>
    <string name="action_rename_custom_album">Rename</string>
    <string name="action_delete_custom_album">Remove</string>

    <string name="action_favorite_add_confirm">Added to favorites</string>
    <string name="action_favorite_remove_confirm">Removed from favorites</string>
    <string name="action_delete_confirm">Image deleted</string>
    <string name="action_set_as_header">Set as…</string>
    <string name="action_send_to_header">Send to…</string>

    <string name="delete_warning_dialog_title">Remove from device</string>
    <string name="delete_warning_dialog_msg">Do you really want to delete this?</string>
    <string name="yes" translatable="false">@android:string/yes</string>
    <string name="no" translatable="false">@android:string/no</string>

    <string name="toast_copied">Copied</string>
    <string name="toast_moved">Moved</string>

    <string name="edit_with">Edit with</string>
    <string name="no_edit_app_found">No valid app has been found</string>

    <!-- About dialog -->
    <string name="repo_url_desc">&lt;a href="https://github.com/84436/Android-Project-01">
        this link&lt;/a></string>
    <string name="about_intro">"&lt;p>This is the modified version of GalleryOne.
        If you would like to see the original upstream version, please visit %1$s.
        &lt;br/>&lt;/p>
        A simple photo viewing and editing app. Part of the Introduction to Android course.
        There's also a nice secret album included: tap and hold About button in the bottom drawer
        to open. Tap and hold Move button on an image/video to move it into here.     "</string>
    <string name="about_people">
        fit@hcmus: 18CLC-KTPM2\n
        18127221 Bùi Văn Thiện\n
        18127252 Đinh Thành Việt\n
        \n
        Also with the help of:\n
        Xuân Kiệt + Đức Tuấn;\n
        Quốc Huy + Thế Hiển;\n
        Gallery3D project from AOSP;\n
        a whole lot of Google-fu and StackOverflow;\n
        and an immeasurable amount of help from everyone we love.
    </string>
    <string name="tab_favorites">Favorites</string>
    <string name="secret_passcode_enter">Enter passcode</string>
    <string name="please_grant_permission">Please grant the app storage permission to read your photos.</string>
    <string name="button_grant_permission">Verify permission</string>
    <string name="refresh">Refresh</string>
    <string name="refreshing">Refreshing</string>

    <string name="dialog_new_album_title">New album</string>
    <string name="dialog_new_album_placeholder">Enter new album name</string>
    <string name="dialog_new_album_error_blank_name">This album needs a name</string>
    <string name="dialog_new_album_error_name_existed">This name is already being used.
        Please try a different name</string>
    <string name="dialog_new_album_create_button">Create album</string>
    <string name="dialog_new_album_cancel_button">Cancel</string>

    <string name="text_custom_album">Your albums</string>
    <string name="text_add_to_album">Add to album</string>

    <string name="dialog_rename_album_title">Rename album</string>
    <string name="dialog_rename_album_cancel_button">Cancel</string>
    <string name="dialog_new_album_rename_button">OK</string>

    <string name="settings_theme_default">Follow system</string>
    <string name="settings_theme_day">Day</string>
    <string name="settings_theme_night">Night</string>
    <string name="material_2">Material 2</string>
    <string name="material_3">Material 3</string>
</resources>
