<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_tab_all"
        android:enabled="true"
        android:icon="@drawable/ic_tab_all"
        android:title="@string/tab_all" />
    <item
        android:id="@+id/menu_tab_album"
        android:enabled="true"
        android:icon="@drawable/ic_tab_album"
        android:title="@string/tab_album" />
    <item
        android:id="@+id/menu_tab_date"
        android:enabled="true"
        android:icon="@drawable/ic_tab_date"
        android:title="@string/tab_date" />
    <item
        android:id="@+id/menu_tab_favorites"
        android:enabled="true"
        android:icon="@drawable/ic_tab_favorite"
        android:title="@string/tab_favorites" />
</menu>