<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bdrawer_secure"
    style="?Style.BottomDrawer"
    app:behavior_peekHeight="@dimen/bdrawer_peek_height"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <!-- DRAGGABLE SHEET HINT -->
    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:background="?android:attr/listDivider" />

    <!-- NAVBAR + EXPAND SHEET BUTTON -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bdrawer_toolbar_height"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/btn_close_secret"
            android:src="@drawable/ic_back"
            android:tooltipText="@string/btn_secret_album_exit"
            style="@style/StyleBottomDrawerImageButton" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/secret_album"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <ImageButton
            android:id="@+id/btn_bottom_sheet_expand"
            android:src="@drawable/ic_bdrawer_up"
            style="@style/StyleBottomDrawerImageButton" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/divider_large"
        android:paddingTop="@dimen/divider"
        android:paddingRight="@dimen/divider_large"
        android:paddingBottom="@dimen/divider">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/bdrawer_header_viewmode"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/viewmode_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_list"
                style="?materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_list" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_grid_3"
                style="?materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_3"
                app:icon="@drawable/ic_view_grid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_grid_4"
                style="?materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_4"
                app:icon="@drawable/ic_view_grid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_grid_5"
                style="?materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_5"
                app:icon="@drawable/ic_view_grid" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/divider_large" />

        <TextView
            android:id="@+id/bottom_sheet_settings_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/bdrawer_secret_header_more"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_secret_album_change_password"
            style="?materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_secret_album_passcode"
            app:icon="@drawable/ic_secret_passcode" />

    </LinearLayout>

</LinearLayout>
