<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewMode"
            type="String" />
    </data>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/viewmode_item"
        buttonViewModeItemState="@{viewMode}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:selectionRequired="true"
        app:singleSelection="true"
        tools:visibility="visible">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_viewmode_item_list"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bdrawer_viewmode_list" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_viewmode_item_grid_3"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bdrawer_viewmode_grid_3"
            app:icon="@drawable/ic_view_grid" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_viewmode_item_grid_4"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bdrawer_viewmode_grid_4"
            app:icon="@drawable/ic_view_grid" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_viewmode_item_grid_5"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/bdrawer_viewmode_grid_5"
            app:icon="@drawable/ic_view_grid" />

    </com.google.android.material.button.MaterialButtonToggleGroup>
</layout>
