<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dialog_root_padding_vertical"
        android:paddingVertical="@dimen/dialog_root_padding_vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/dialog_change_theme_title"
            style="@style/CustomAlbumDialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bdrawer_more_theme"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/dialog_change_theme_daynight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_change_theme_title"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_default_mode"
                style="?materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/settings_theme_default"
                app:icon="@drawable/ic_settings_theme_default"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_day_mode"
                style="?materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/settings_theme_day"
                app:icon="@drawable/ic_settings_theme_day"
                app:iconGravity="textStart" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_night_mode"
                style="?materialButtonOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/settings_theme_night"
                app:icon="@drawable/ic_settings_theme_night"
                app:iconGravity="textStart" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/dialog_change_theme_material"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_change_theme_daynight"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_material2"
                style="?materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/material_2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_material3"
                style="?materialButtonOutlinedStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/material_3" />

        </com.google.android.material.button.MaterialButtonToggleGroup>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_theme"
            style="@style/CustomAlbumDialogPositiveButton"
            android:layout_marginTop="16dp"
            android:text="@string/dialog_new_album_rename_button"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dialog_change_theme_material" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_cancel"
            style="?Style.Button.CustomAlbumDialogNegative"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_new_album_cancel_button"
            android:theme="?materialButtonOutlinedStyle"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_save_theme" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>