<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/dialog_root_padding_vertical"
        android:paddingVertical="@dimen/dialog_root_padding_vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/CustomAlbumDialogTitle"
            android:text="@string/dialog_rename_album_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout"
            style="@style/CustomAlbumDialogTextInputLayout"
            app:hintEnabled="false"
            app:layout_constraintBottom_toTopOf="@+id/btn_dialog_rename_album"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_dialog_rename_album"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:placeholderText="@string/dialog_new_album_placeholder">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_input"
                style="@style/CustomAlbumDialogTextInput"
                android:hint="@string/dialog_new_album_placeholder" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_dialog_rename_album"
            style="@style/CustomAlbumDialogPositiveButton"
            android:enabled="false"
            android:text="@string/dialog_new_album_rename_button"
            app:icon="@drawable/ic_check"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/CustomAlbumDialogNegativeButton"
            android:text="@string/dialog_new_album_cancel_button"
            app:icon="@drawable/ic_close"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/btn_dialog_rename_album" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>