<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="item"
            type="hcmus.android.gallery1.data.Item" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:useDefaultMargins="true"
        tools:showIn="@layout/bottom_drawer_view_image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_file_name"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_file_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@{item.fileName}"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:text="@string/placeholder_card_details" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_timestamp"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_timestamp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@{String.valueOf(item.dateModified)}"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:text="@string/placeholder_card_details" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_resolution"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- todo get info resolution -->
            <TextView
                android:id="@+id/info_resolution"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:text="@string/placeholder_card_details" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_file_size"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_file_size"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@{@plurals/info_file_size_value((int)item.fileSize, (int)item.fileSize)}"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:text="@string/placeholder_card_details" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/info_file_path"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/info_file_path"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@{item.filePath}"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                tools:text="@tools:sample/lorem/random" />
        </LinearLayout>


    </LinearLayout>
</layout>

    